--- a/src/app/features/character/component/talent/talent.component.html
+++ b/src/app/features/character/component/talent/talent.component.html
@@ -66,13 +66,13 @@
                                 [skill]="skill"
                                 [language]="currentLanguage"
                                 [hasLevel]="true"
-                                [skillLevelIndex]="'01'">
+                                [skillLevelIndex]="talentDefaultLevel">
                             </app-extra-info>
                             <!-- <table>
                                 <tr *ngFor="let paramDesc of getCharSkillDescObject(skill, currentLanguage)">
                                     <td [innerText]="paramDesc.desc"></td>
-                                    <td [innerText]="getTalentValue(skill, paramDesc, currentLanguage, '01')"
-                                        [matTooltip]="getTalentValue(skill, paramDesc, currentLanguage, '01', true)" matTooltipPosition="right">
+                                    <td [innerText]="getTalentValue(skill, paramDesc, currentLanguage, talentDefaultLevel)"
+                                        [matTooltip]="getTalentValue(skill, paramDesc, currentLanguage, talentDefaultLevel, true)" matTooltipPosition="right">
                                     </td>
                                 </tr>
                             </table> -->
