fix the background animation in some condition

--- a/src/app/features/character/component/main/main.component.html
+++ b/src/app/features/character/component/main/main.component.html
@@ -1,5 +1,7 @@
 <div class="main">
-    <div [@imgLoad]="imgState" class="background" *ngIf="backgroundURL" [style.background-image]="'url(' + backgroundURL + ')'"></div>
+    <div class="background" [style.background-image]="'url(' + backgroundURL + ')'" [@imgLoad]="imgState">
+        <div class="background"></div>
+    </div>
     <div class="content" fxLayout="row wrap" fxLayoutAlign="center" [@otherLoad]="otherState">
         <div>
             <app-character [data]="data" [language]="currentLanguage"></app-character>
