--- a/src/app/features/character/component/main/main.component.css
+++ b/src/app/features/character/component/main/main.component.css
@@ -22,6 +22,12 @@
     width: 100%;
 }
 
+.background-content {
+    position: fixed;
+    min-height: 100%;
+    width: 100%;
+}
+
 .middle {
     margin-top: 24px;
 }
