--- a/src/app/shared/component/extra-data/extra-data.component.css
+++ b/src/app/shared/component/extra-data/extra-data.component.css
@@ -1,15 +1,19 @@
 table {
     width: 100%;
     word-break: break-all;
-    border-left: 1px solid rgba(0,0,0,.12);
-    border-right: 1px solid rgba(0,0,0,.12);
+    border-left: 2px solid rgba(0,0,0,.12);
+    border-right: 2px solid rgba(0,0,0,.12);
     border-collapse: separate;
     border-spacing: 0;
     border-radius: 3px;
 }
 
 table tr:first-child td {
-    border-top: 1px solid rgba(0,0,0,.12);
+    border-top: 2px solid rgba(0,0,0,.12);
+}
+
+table tr:last-child td {
+    border-bottom: 2px solid rgba(0,0,0,.12);
 }
 
 tr td:nth-of-type(1) {
