--- a/src/app/features/character/component/main/main.component.html
+++ b/src/app/features/character/component/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-    <div class="background" [style.background-image]="'url(' + backgroundURL + ')'" [@imgLoad]="imgState">
+    <div class="background" *ngIf="backgroundURL" [style.background-image]="'url(' + backgroundURL + ')'" [@imgLoad]="imgState">
         <div class="background"></div>
     </div>
     <div class="content" fxLayout="row wrap" fxLayoutAlign="center" [@otherLoad]="otherState">
