--- a/src/app/features/character/component/main/main.component.html
+++ b/src/app/features/character/component/main/main.component.html
@@ -10,6 +10,8 @@
         </div>
         <div>
             <app-weapon [data]="data" [language]="currentLanguage"></app-weapon>
+            <div class="middle"></div>
+            <app-artifact></app-artifact>
         </div>
         <div>
             <app-talent [data]="data" [language]="currentLanguage"></app-talent>
