--- a/src/app/features/character/component/other/other.component.html
+++ b/src/app/features/character/component/other/other.component.html
@@ -1,1 +1,29 @@
-<p>other works!</p>
+<ng-container>
+    <mat-card class="card" cdkDrag>
+        <div class="drap-handle" cdkDragHandle>
+            <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
+                <path
+                    d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
+                </path>
+                <path d="M0 0h24v24H0z" fill="none"></path>
+            </svg>
+        </div>
+        <mat-card-header>
+            <mat-card-title [innerText]="'OTHER.NAME' | translate"></mat-card-title>
+        </mat-card-header>
+        <mat-card-content class="content">
+            <mat-tab-group [(selectedIndex)]="selectedIndex">
+                <mat-tab *ngFor="let tab of tabs; let index = index" [label]="'[  ' + (index + 1) + '  ]'">
+                    
+                </mat-tab>
+                <mat-tab disabled>
+                    <ng-template mat-tab-label>
+                        <button mat-icon-button (click)="addTab()">
+                            <mat-icon>add_circle</mat-icon>
+                        </button>
+                    </ng-template>
+                </mat-tab>
+            </mat-tab-group>
+        </mat-card-content>
+    </mat-card>
+</ng-container>
