--- a/src/app/features/character/component/main/main.component.html
+++ b/src/app/features/character/component/main/main.component.html
@@ -12,6 +12,8 @@
             <app-weapon [data]="data" [language]="currentLanguage"></app-weapon>
             <div class="middle"></div>
             <app-artifact></app-artifact>
+            <div class="middle"></div>
+            <app-other></app-other>
         </div>
         <div>
             <app-talent [data]="data" [language]="currentLanguage"></app-talent>
