--- a/src/app/features/character/component/other/other.component.html
+++ b/src/app/features/character/component/other/other.component.html
@@ -27,7 +27,7 @@
                 </mat-tab>
                 <mat-tab disabled>
                     <ng-template mat-tab-label>
-                        <button mat-icon-button (click)="addTab()">
+                        <button class="add-button" mat-icon-button (click)="addTab()" matTooltip="Add" matTooltipPosition="above">
                             <mat-icon>add_circle</mat-icon>
                         </button>
                     </ng-template>
