--- a/src/app/features/character/component/artifact-sub/artifact-sub.component.html
+++ b/src/app/features/character/component/artifact-sub/artifact-sub.component.html
@@ -1,22 +1,28 @@
-<mat-form-field appearance="legacy" floatLabel="always">
-    <mat-label [innerText]="'ARTIFACT.MAIN' | translate"></mat-label>
-    <mat-select>
-        <mat-option></mat-option>
-        <mat-option *ngFor="let main of mainList" [value]="main.name">
-            <span [innerText]="'PROPS.' + main.name.toUpperCase() | translate"></span>
-            -
-            <span [innerText]="main.isPercent?(main.value | percent: '1.0-1' | noComma):(main.value | number: '1.0-0' | noComma)"></span>
-        </mat-option>
-    </mat-select>
-</mat-form-field>
-<ng-container *ngFor="let sub of subs">
+<ng-container *ngFor="let main of mains">
     <mat-form-field appearance="legacy" floatLabel="always">
-        <mat-label [innerText]="'ARTIFACT.' + sub | translate"></mat-label>
-        <mat-select>
+        <mat-label [innerText]="'ARTIFACT.' + main | translate"></mat-label>
+        <mat-select [value]="data[main.toLowerCase()].name" (selectionChange)="onSelect(main, $event.value)">
             <mat-option></mat-option>
-            <mat-option *ngFor="let sub of subList" [value]="sub">
-                <span [innerText]="'PROPS.' + sub.toUpperCase() | translate"></span>
+            <mat-option *ngFor="let main of mainList" [value]="main.name">
+                <span [innerText]="'PROPS.' + main.name.toUpperCase() | translate"></span>
+                -
+                <span [innerText]="main.isPercent?(main.value | percent: '1.0-1' | noComma):(main.value | number: '1.0-0' | noComma)"></span>
             </mat-option>
         </mat-select>
     </mat-form-field>
+    <br>
+</ng-container>
+<ng-container *ngFor="let sub of subs">
+    <mat-form-field appearance="legacy" floatLabel="always" class="sub-field">
+        <mat-label [innerText]="'ARTIFACT.' + sub | translate"></mat-label>
+        <mat-select [value]="data[sub.toLowerCase()].name" (selectionChange)="onSelect(sub, $event.value)">
+            <mat-option></mat-option>
+            <mat-option *ngFor="let subValue of subList" [value]="subValue">
+                <ng-container *ngIf="!isDuplicate(subValue)">
+                    <span [innerText]="'PROPS.' + subValue.toUpperCase() | translate"></span>
+                </ng-container>
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+    <br>
 </ng-container>
