--- a/src/app/features/character/component/artifact/artifact.component.html
+++ b/src/app/features/character/component/artifact/artifact.component.html
@@ -12,14 +12,14 @@
             <mat-card-title [innerText]="'ARTIFACT.NAME' | translate"></mat-card-title>
         </mat-card-header>
         <mat-card-content class="content">
-            <mat-tab-group [(selectedIndex)]="selectedIndex">
+            <mat-tab-group [(selectedIndex)]="selectedIndex" (selectedIndexChange)="setActiveIndex()">
                 <mat-tab *ngFor="let tab of tabs; let index = index" [label]="'[  ' + (index + 1) + '  ]'">
                     <!-- 聖遺物詳細 -->
-                    <mat-tab-group *ngIf="selectedIndex == index" mat-stretch-tabs>
+                    <mat-tab-group *ngIf="selectedIndex == index" mat-stretch-tabs [(selectedIndex)]="partIndex">
                         <ng-container *ngFor="let type of artifactList">
                             <mat-tab [label]="'ARTIFACT.' + type | translate">
                                 <br>
-                                <app-artifact-sub [artifactType]="type"></app-artifact-sub>
+                                <app-artifact-sub [characterIndex]="data.id" [index]="index" [artifactType]="type"></app-artifact-sub>
                             </mat-tab>
                         </ng-container>
                         <mat-tab disabled>
@@ -39,7 +39,10 @@
                 </mat-tab>
                 <mat-tab disabled>
                     <ng-template mat-tab-label>
-                        <button mat-icon-button (click)="addTab()">
+                        <button class="add-button" mat-icon-button (click)="copyTab()" matTooltip="Copy" matTooltipPosition="above">
+                            <mat-icon>content_copy</mat-icon>
+                        </button>
+                        <button class="add-button" mat-icon-button (click)="addTab()" matTooltip="Add" matTooltipPosition="above">
                             <mat-icon>add_circle</mat-icon>
                         </button>
                     </ng-template>
