--- a/src/app/features/character/component/artifact-sub/artifact-sub.component.css
+++ b/src/app/features/character/component/artifact-sub/artifact-sub.component.css
@@ -1,3 +1,22 @@
 .sub-field {
     width: 140px;
 }
+
+.sub-span {
+    display: inline-block;
+    text-align: left;
+    width: 27px;
+}
+
+table {
+    width: 91%;
+    border-collapse: collapse;
+}
+
+tr td:nth-of-type(1) {
+    text-align: left;
+}
+
+tr td:nth-of-type(2) {
+    text-align: right;
+}
